<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.utexas.pickup.GameLobbyActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	
    <item
        android:id="@+id/map_view"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/map_view"/>
    <item
        android:id="@+id/player_profile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/player_profile"/>
    
    <item
        android:id="@+id/sign_out"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sign_out"/>
    
    
</menu>
