<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/graybg3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.utexas.pickup.CreateGameActivity" >

    <Button
        android:id="@+id/create_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:text="@string/create_game"
        android:background="@drawable/custom_button"
        style="@style/button_text" />

    <EditText
        android:id="@+id/num_of_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_game_button"
        android:layout_alignLeft="@+id/game_location"
        android:layout_marginBottom="109dp"
        android:ems="10"
        android:hint="@string/num_players"
        android:inputType="text"
        android:textColorHint="#FFFFFF" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/game_restrictions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/num_of_players"
        android:layout_alignTop="@+id/num_of_players"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/restrictions"
        android:inputType="textMultiLine"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/game_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/num_of_players"
        android:layout_alignLeft="@+id/create_game_button"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="text"
        android:textColorHint="#FFFFFF" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/select_sport" />

    <TextView
        android:id="@+id/time"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/timePicker1"
        android:text="@string/datetime"
        android:textColor="@android:color/white"
        android:textColorHint="#FFFFFF" />

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignBottom="@+id/num_of_players"
        android:layout_centerHorizontal="true"
        android:scaleX="0.7"
        android:scaleY="0.7" />

    <TextView
        android:id="@+id/select_sport"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/create_game_button"
        android:layout_alignParentLeft="true"
        android:text="@string/select_sport"
        android:textColor="@android:color/white" />

</RelativeLayout>