<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/graybg3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.utexas.pickup.RegisterActivity" >

        <requestFocus />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="17dp"
            android:background="@drawable/custom_button"
            android:text="@string/register"
            style="@style/button_text"  />

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/firstname_lastname"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/firstname_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/create_an_account"
            android:layout_marginTop="38dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="#FFFFFF" />

        <TextView
            android:id="@+id/create_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/create_account"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#2694ed" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/usernameText"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/usernameText"
            android:layout_marginTop="83dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/password_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordText"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/passwordText"
            android:ems="10"
            android:hint="@string/password_confirmation"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF" />

"

</RelativeLayout>