<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/graybg3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.utexas.pickup.LoginActivity" >

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameText"
        android:layout_alignRight="@+id/usernameText"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF" />

        <requestFocus />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="17dp"
            android:background="@drawable/custom_button"
            android:text="@string/register"
            style="@style/button_text" />
        <EditText
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/passwordText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="#FFFFFF" />

        <Button
            android:id="@+id/login_button"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/need_to_register"
            android:layout_alignLeft="@+id/need_to_register"
            android:layout_alignRight="@+id/register_button"
            android:background="@drawable/custom_button"
            android:text="@string/login" />

        <TextView
            android:id="@+id/need_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/register_button"
            android:layout_alignLeft="@+id/register_button"
            android:text="@string/needtoregister"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/usernameText"
            android:layout_alignLeft="@+id/login_button"
            android:layout_alignRight="@+id/login_button"
            android:src="@drawable/logo_final" />

</RelativeLayout>