<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/graybg3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.utexas.pickup.PlayerProfileActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/walid_pic" />

    <TextView
        android:id="@+id/sportsmanship_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/sportsmanship"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/skill_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sportsmanship_rating"
        android:layout_below="@+id/sportsmanship_rating"
        android:text="@string/skill"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/player_profile"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#2694ed" />

    <ListView
        android:id="@+id/profile_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="18dp"
		android:divider="@android:color/transparent"
		android:dividerHeight="20sp"
        >

    </ListView>

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="15sp"
        android:layout_height="15sp"
        android:layout_above="@+id/skill_rating"
        android:layout_alignTop="@+id/sportsmanship_rating"
        android:layout_toRightOf="@+id/sportsmanship_rating"
        android:padding="2dip"
        android:src="@drawable/gold_star2" />

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="15sp"
        android:layout_height="15sp"
        android:layout_above="@+id/skill_rating"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/ImageView01"
        android:padding="2dip"
        android:src="@drawable/gold_star2" />

    <ImageView
        android:id="@+id/ImageView03"
        android:layout_width="15sp"
        android:layout_height="15sp"
        android:layout_alignBottom="@+id/skill_rating"
        android:layout_below="@+id/sportsmanship_rating"
        android:layout_toRightOf="@+id/skill_rating"
        android:padding="2dip"
        android:src="@drawable/gold_star2" />

</RelativeLayout>